--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "strict": false,
+    "skipLibCheck": true
+  },
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
