--- a/packages/components/tsconfig.node.json
+++ b/packages/components/tsconfig.node.json
@@ -11,7 +11,7 @@
     "allowImportingTsExtensions": true,
 
     /* Linting */
-    "strict": true,
+    "strict": false,
     "noFallthroughCasesInSwitch": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
